# responsefun

./: .gitignore  .lgtm.yml  .travis.yml  CODE_OF_CONDUCT.md  README.md  ci_env.yml  demo.ipynb  pyproject.toml  setup.cfg  setup.py  sympy_test.ipynb
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml
devtools/: README.md
devtools/conda-recipe/: meta.yaml
docs/: Makefile  README.md  conf.py  index.rst  make.bat
examples/: alpha.py  alpha_sos_expr.py  beta_complex.py  beta_sos.py  bla.tex  cme.py  esp.py  isr_conversion.py  mcd.py  permutation_sos_beta.py  polarizability.py  rixs.py  rixs_short.py  second_order_nlo.py  test.py  third_order_nlo.py  threepa.py  tpa.py  tpcd.py
responsefun/: AdccProperties.py  IsrFormulation.py  MockExcitedState.py  MockExcitedStates.py  ResponseOperator.py  SumOverStates.py  __init__.py  _version.py  adcc_properties.py  alpha_sos.py  b_matrix_vector_product.py  bmatrix_vector_product.py  build_tree.py  conftest.py  evaluate_property.py  find_correlations_btw_freq.py  gamma_extra_terms.py  generate_dalton_input.py  isr_conversion.py  magnetic_bmatrix_vector_product.py  magnetic_bmatrix_vector_product_signs.py  magnetic_dipole_moments.py  methods.py  misc.py  modified_transition_moments.py  operators.py  response_operators.py  responsefun.py  rvec_algebra.py  sum_over_states.py  symbols_and_labels.py  test.py  test_extra_terms.py  test_magnetic_properties.py  test_property.py  test_smoke.py  test_twodimensional_operators.py  test_twodimensionaloperators.py  tmpf7lr4ycu  tmpjgo2mbnt  (+1 more)
responsefun/response/: __init__.py  _sos_equations.py  response_functions.py  sum_over_states.py
responsefun/testdata/: 0_download_testdata.sh  0_update_testdata.sh  SHA256SUMS  cache.py  dump_full_diagonalization.py  mock.py  static_data.py
responsefun/testdata/h2o_sto3g_adc2.zarr/excitation/: .zattrs
responsefun/testdata/h2o_sto3g_adc2.zarr/excitation/cross_section/: 0
responsefun/testdata/h2o_sto3g_adc2.zarr/excitation/excitation_energy_uncorrected/: 0
responsefun/testdata/h2o_sto3g_adc2.zarr/excitation/oscillator_strength/: 0
responsefun/testdata/h2o_sto3g_adc2.zarr/excitation/oscillator_strength_velocity/: 0
responsefun/testdata/h2o_sto3g_adc2.zarr/excitation/rotatory_strength/: 0
responsefun/testdata/h2o_sto3g_adc2.zarr/excitation/state_dipole_moment/: 0.0
responsefun/testdata/h2o_sto3g_adc2.zarr/excitation/transition_dipole_moment/: 0.0
responsefun/testdata/h2o_sto3g_adc2.zarr/excitation/transition_dipole_moment_s2s/: .zarray  0.0.0
responsefun/testdata/h2o_sto3g_adc2.zarr/excitation/transition_dipole_moment_velocity/: 0.0
responsefun/testdata/h2o_sto3g_adc2.zarr/excitation/transition_magnetic_dipole_moment/: 0.0
responsefun/tests/: test_responseFunction.py  test_response_functions.py  test_responsefun.py  test_sum_over_states.py
responsetree/: build_tree.py  create_tree.py  evaluate_property.py  gamma_extra_terms.py  isr_conversion.py  response_operators.py  sum_over_states.py  symbols_and_labels.py  test.py  test_property.py  transition_moments.py
responsetree/testdata/: cache.py
(+15 files in other folders)
